# master-thesis

./: CITATION.cff  README.md  shell.nix
.github/workflows/: compile-pdf.yml
data/: README.md  gen_input_dataset.py
data/github/: 01_get_repos.py  02_fetch_refs.py  03_process_raw_gh_data.py  get_repos.py  process_raw_gh_data.py
data/pypi/: get-top-packages.py
detection-benchmarks/: README.md
docs/: 01-proposal.typ  02-individual-plan.typ  03-thesis.typ  04-presentation.typ  README.md  ieee-et-al-3.csl  references.yml
docs/assets/: summary-deps.json  summary-vulnerable.json  summary.json
docs/content/: abstract-1-en.typ  abstract-2-sv.typ  acknowledgements.typ  ch01-introduction.typ  ch02-background.typ  ch03-method.typ  ch04-the-thing.typ  ch05-results.typ  ch06-discussion.typ  ch07-conclusion.typ  zz-a-usage.typ  zz-b-analysis-results.typ
docs/proposal/: proposal.typ  references.yml  template.typ
docs/utils/: acronyms.typ  constants.typ  enum-references.typ  global-imports.typ  slides-template.typ  (+1 more)
gadget-examples/: README.md
nix/: 0001-add-werkzeug-cached-property-decorator.diff  0002-change-taint-config-suffix.diff  default.nix  figtree.nix  pyre-check.nix  sapp.nix
tool/: Cargo.toml  run_sandbox.sh
tool/src/: cli.rs  errors.rs  lib.rs  main.rs
tool/src/analyse/: mod.rs  results.rs
tool/src/e2e/: config.rs  labeling.rs  mod.rs  pipeline.rs  summary.rs  temp.rs
tool/src/pyre/: config.rs  mod.rs  models.rs  results.rs
tool/src/python/: deps.rs  mod.rs
tool/taint-models/: default.pysa  django.pysa  flask.pysa  sqlalchemy.pysa
(+14 files in other folders)
