[package]
name = "class-pollution-detection"
description = "Find class pollution in Python programs"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.97"
clap = { version = "4.5.35", features = ["derive", "env"] }
serde = { version = "1.0.219", features = ["derive"] }
tempdir = "0.3.7"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
