[package]
name = "class-pollution-detection"
description = "Find class pollution in Python programs"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.97"
clap = { version = "4.5.35", features = ["derive", "env"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tempdir = "0.3.7"
thiserror = "2.0.12"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
