[package]
name = "class-pollution-detection"
description = "Find class pollution in Python programs"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.97"
bzip2 = "0.6.0"
clap = { version = "4.5.35", features = ["derive", "env"] }
flate2 = "1.1.1"
itertools = "0.14.0"
reqwest = { version = "0.12.17", features = ["blocking", "rustls-tls-native-roots"], default-features = false }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
signal-child = "1.0.6"
tar = "0.4.44"
tempdir = "0.3.7"
thiserror = "2.0.12"
toml = "0.8.22"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
wait-timeout = "0.2.1"
zip = "4.3.0"
